update-smart-drivedb.ps1: fix failure on output path with directory
Signed-off-by: Christian Franke <christian.franke@t-online.de>

--- a/src/os_win32/update-smart-drivedb.ps1.in
+++ b/src/os_win32/update-smart-drivedb.ps1.in
@@ -199,8 +199,8 @@ function rm_rf($dir)
 function mv_f($oldfile, $newfile)
 {
   rm_f $newfile
-  vecho "Rename-Item '$oldfile' '$newfile'"
-  Rename-Item $oldfile $newfile
+  vecho "Move-Item '$oldfile' '$newfile'"
+  Move-Item $oldfile $newfile
 }
 
 function selecturl($url_of, [ref]$url)
