--- a/src/update-smart-drivedb.in
+++ b/src/update-smart-drivedb.in
@@ -289,6 +289,7 @@ selectkey()
 {
   case $1 in
     7.[0235])
+# Smartmontools DriveDB Key (through 2030) <smartmontools-support@listi.jpberlin.de>
 # Smartmontools Signing Key (through 2025) <smartmontools-database@listi.jpberlin.de>
 # Smartmontools Signing Key (through 2020) <smartmontools-database@listi.jpberlin.de>
 # Key ID 721042C5
@@ -306,76 +307,116 @@ mvFqRtHzJb20dKufyjOmSMzNKRzURVmobECKARaBlGNP0wHYhq97n4OxM1o0eq7a
 4ugaSp2q+6BSaAQhbZN8ULCF/oGA/376Sz7RNuoOmQwl9aFqnfl3YgopBIqKvnSP
 h4j0QynN45rUFOe/VywTmpWKj+DonGCupxe9VvyZ87NKRgKiHprXGDrhdB0GcNXM
 wV66WbjKBV7qlpSh/GH3oiHwlcYT8LNyZbxTJXcVF5ODtlZfc9zqRtUBWQARAQAB
-tFNTbWFydG1vbnRvb2xzIFNpZ25pbmcgS2V5ICh0aHJvdWdoIDIwMjUpIDxzbWFy
-dG1vbnRvb2xzLWRhdGFiYXNlQGxpc3RpLmpwYmVybGluLmRlPokCQQQTAQIAKwIb
-AwUJDS6amwYLCQgHAwIGFQgCCQoLBBYCAwECHgECF4AFAl/gnzECGQEACgkQ6nSr
-JXIQQsW11g//UmnWOtIgozoqs6beK12NpZyubn/lecEd0yJPzed9cygKpObySBbT
-5jz7e5IDGwFLDsTm9fE/2GoyvuVW/riyTsowxrYYleoKm4Pmv30crNruVM7mC7c8
-+rbwmx5ZlmHC1tMsM/BdIxK0gqHyAXxWmzyB/YDGElkWnq2/+wjEoARbROUoKQYL
-qG6q6bv/DQvv4tq/Yw+fsaLZsR4Cou87hB3wAwR3rv3p3GC7N+if86fbkS8rQh5b
-j3qwTHnf3ugyYz9iEy2pjrHqgnDMV227tP2UiC2ECy3u1Z7eQvMeN2r0x8EIB79D
-G7ny7ML3QXsJG9Pamg4VHlMh+Sb23GE6rRQuv9m265PeS4/6CsbuHdGer+UaG78V
-N4bfFhMWpE4sjDZlQZBcm6VLbExhuS89GI7+9zYMtLoXE6Z5Mz0XFjSKlzEK94UT
-RPcDdcQUHW59NvhG77SvTKN5PHGbcs+0uQkUkvaOxoovio2vWcYANG4eIPC/YvPZ
-9q7f/bhMDbKid7eIvtCgvijSiYKQLjt1FtJJZRYF/EESdWWNJTs2OgSFMgSDBE3K
-Da5alJyx3+IlYFwvF/khtQnGeTB1XRIGL8G7UMaNzpvJQOAEbqEiznyqoo5cNpz+
-03wTOw9IGVJ2fcvg2g+j7ffKQfs+GDYWAqicSKHDYpW2csBAW/1QE62JARwEEwEC
-AAYFAl/gnzoACgkQL83sC9OvGqvE0Af/XXZ4GWMf4rEB0G3lXr9L9bvX4a/tVWz0
-hag57D6By9R6cWNDpRtKx5R0Y1Fv+O+sPHptM3P6LUsWI0d7dEf307n34FxkI/vh
-4W1g8ITvhYfJWmJTzA1kNAief45uNPx0QWhGlVf4nQzhe41XnuBdFhYfOkHGf6k8
-9SJ9qWRitzE657h6mVO0EKqvjTld8w6lR2rA+oHPQnc9iDmXcZLfSTHP/NapQXPl
-qtXiR1z0BkswBBaKCnJxVPpzjQA0W8jSyhQ4qPheMjOmVaFoQxZ4CbEaFI67EmVl
-kwgwf+c6BlKr3DoOca/KmHYT/9dqUv1gfoYYTCm+ATN76vYCG794EokCHAQTAQIA
-BgUCX+CfRQAKCRC/CzOcZLyqiwQWD/9eNQNnKWxkYL3qjSRt0DwUUaCcFDoj40rb
-fRxWdU+LZKL7KjAWoRhdfaH7T30wZ9NFenrQXaU/QzuYioz1sHRwIIRYyUp2s0Jc
-VHAIuOPjk6Q3TDVnbEm0AO0Er32gdxC0DYk4RfGp95n1Aw1kd2BSvKPJuZSRJrIV
-f8iU3Im1KT4Avl7Fw7FEojQMMvn/qZzeo2pk/QdrrK3KnHkQwy2edx/szY82o2a5
-g5WarFFRcxVS2H/xrvNMGUL4TsWcGd3Z2oHoZ0u5A20/PpT2xG1LGXGEwBAqtMS2
-6iRAzbQFkkLhcdETTvOSqkDWkzr7NqJ6adhLOEVXsHXNLx23p1Tn+Li/ezpQ6/eQ
-QDPclU19BjARmfInDq0w5V1q0RNET1J2Xu+Adxtq+Dl8TyhCmJMzO8e4htYnIRZu
-90iSgZdt5cZgoH04weXCMwDugn/+Q3rzKvRUTrEfSOivJYg65D/mhbz6HoUTs4JD
-SstTYa9qNCwKQGRSeis4PAgu0hCpnDAhZuN3Ja5AFC2Wi2szQ7R+Zx/JucIBm5S4
-U30W66MtsyUHeulSJ3AV3HrbFfnqu6zfQM4XLw7MpAtQUNJceS/lWfGIquAp3tY/
-IjZIHwgZqKB3czWDhM83wBzCWgAmxyzIrpb4MBYJ5PGuCyC7R/YTdtPJXxsPQl2l
-znsX/9ssa4kBHAQTAQIABgUCX+CfSAAKCRDzh2PO39IlWVcuB/9UkLaPtGY4sDDV
-/A7qjSvSy93mv8gkaIj9dhqoZw+r7cLiEtX04Cz9PqocOFgCYJXKrufHNNkHke2A
-jE9EJfRKiPU/bkeWmrACvtrOd/DZbdmXfxTOekOr516D2ip/U8GBPw6zxfCQVot6
-htpBpB6zzMDtzMOeLnkOxoxR4EMu5K6eJ48bHvG/lbGBByyfRzhtqPh6AAA9G1CC
-IdhNkaA5W1qums3N1mCXrTBnWyjaFhdnttGQfrMdHvTQ77HeL0c2axT2y5PYfrXY
-2ZfZowYLEtFXRSTpDaJfgG+qem3N+pMv6SMOG/4CvlH4/3Hq0aCNvKcY5KUXfIgT
-xmc3/n/wtFNTbWFydG1vbnRvb2xzIFNpZ25pbmcgS2V5ICh0aHJvdWdoIDIwMjAp
-IDxzbWFydG1vbnRvb2xzLWRhdGFiYXNlQGxpc3RpLmpwYmVybGluLmRlPokCPgQT
-AQIAKAIbAwYLCQgHAwIGFQgCCQoLBBYCAwECHgECF4AFAl/gnzAFCQ0umpsACgkQ
-6nSrJXIQQsVK7RAAqbZfT3wZEfJkw8MK2JlvgGWH76fHKn5ZoH5i0mA4AvN4QLbU
-5Q20HmqHnO9mfAZQ6u4Tn/aFcYT7nlSsEsEmFX+s5QU2y6m2Tx9ThDbZ03ezREOS
-0wNf0FOQunV9ZVPT/7cKIgWJa5mZy+LClor9OHllyGUfs9tKNzwxaHh1zBrCNJow
-Fi/1bkWy3iMc7vZhWHASwPSp64KHjB4UdMz2hV4pROiUhWi7BY0exIHyZrkcANMP
-Hhl9lP32ZvNbOy8osBdPUgXyK3HePD+ftcwJMkoc4mFQXYi9UY7NQpk7STRO10cx
-Kq/CgDDvYxbnViRjQoJ0sfwKCaOfsnY/gea7I0aCx8uNISYpHO9iMidd/tJ7+lgx
-NiKZTI0EppHYvkyMY15/NGb0gTJbYjuVYdbqDS9mnLuLQAjAX43+n9ND2NjX1o0q
-Z9bBqV2VFioNmnxKqGphhRFX9jEzTklieOjhpRrd8v9ljprT6vLFNpYpeLkel8om
-VFXrHxrfzKtVFcto5wqHVOcyZyE2zm1QmsS8qvWOTrNfY6p2q9MA2rysqdfgfvN7
-pNDaXutK6ooQi6YlyyTA2ANnHFKa0ncRH+dg+5OF9rhNvM7RyaBXgxF7+5gnU5Gb
-VQRKbJ+LOtSKkj0pApR5AKSwyGslZ2bNVlKsADWhk5xj8QlHVlNWiht+i/6JARwE
-EwECAAYFAlwmhpwACgkQL83sC9OvGqsVOggAqLB5eQrUv8E9ikD6kJCito827bzD
-WF29yD7PvfhjXaz5in54jOVpwg3o9CsqIjjRW0/1bBVswC8ZL0sAdZ+GDSDMw5F2
-IpkD77gjnFY79M/e6C9xYyxYzHC7emDPSz9IroOvdkkEgrB+OABKkaOCcS18P4Lk
-3WNHaPw5c7aI0z1iJP52EmSfvB8r86mtUFJB+f15eD/4vaRfkZLFjF9FQ3kgEK1U
-+rV4s1O2bCFfP3WPDcc83NgwRUvtXmcSOSOIoXnemJzyJr+JnqCWVET4XWF6i20m
-RFXVEpWtf5AkJYgR3z/jW0djELbBWA/35bAnpXy5pDHv9NbZsTkBZxK/kokBHAQT
-AQIABgUCXCaGnQAKCRAY7NpGy/a6xn4lB/90tXTnZsgmoftol9uivfQrPdR88WmO
-ZLYmUeQAd1rqSFMxe+KzO/qLuU8s6OF4nznwL2cPfbGZxezM4PiYmAmbbEU/3gTO
-NwjVBBA0Gfimy/fITEezFtCigo1thkaJ195g/dqY+zE3Vt4rzC03j1vx8mUHRPU6
-kkvKj8cP0j+XHX2xQDsTXTstfnom29wBmGnvSZ9HgcdL71e1VXJXwikmnO3P4J/1
-C2LeCOlWrGqWZ2c0WBLKdJnsYUx7Dm/OvkkB4lF+zWp98zS8jS/5h+1apVgEzrdT
-MvT8ydTkUr7ObKGkIhK+L+Xo5BD+V9Qf6xKGYPwhhdj/E5/kyjULrm10iQEcBBMB
-AgAGBQJcJoadAAoJEPOHY87f0iVZfiUH/3yKS5wGvTeRInse8+W1WzKuto3XzqXL
-ngb9QXWw7nCwqmNS7PbzDnufQi2ThKrMfcK14WgNYABNZPU75I+6bcb0oCB5tloo
-IUEV/2Ut/5Hl/83zFFoNA/kQKVz8kIDqgRcxC+zY2VJ4eTKHyQDvXygVk8wnKTBa
-e3gX+CIZqJHPXiiygHlbl31Mi3G1Iaxu57dP6ocV0vX1dytKSwd4Rbviwwb4L76o
-/tVT9t3GwFM15uK1SqtnAaiaktEdMi3XI4d01H3VUVz/iR0XQbf13RZoEM6CJWms
-Q/qvYlwkbKOdlahjoHrFlkhADSBaO9N1OZp3OYDjziIujMdt2IPKnmM=
-=7MQk
+tFJTbWFydG1vbnRvb2xzIERyaXZlREIgS2V5ICh0aHJvdWdoIDIwMzApIDxzbWFy
+dG1vbnRvb2xzLXN1cHBvcnRAbGlzdGkuanBiZXJsaW4uZGU+iQJ2BBMBCABgGxSA
+AAAAAAQADm1hbnUyLDIuNSsxLjExLDAsMwIbAwUJFpaFagULCQgHAgIiAgYVCgkI
+CwIEFgIDAQIeBwIXgBYhBN7HrkeWi3yHWUfyqep0qyVyEELFBQJpUpJ1AhkBAAoJ
+EOp0qyVyEELFZLUQAI1oArWWGZ5lT6Rieb+UDS6oah5fHYeKm9Q6krbjrp4zVquv
+pzA0frOZe4PTQk8C1BY/dyxOLhm4AHis+Jqn1nvVcTPJ71WgKTGqadiagrUpIw3A
+h8kFcdbpMLpQpDh3l5aRWjvMFpb/I7DJa5FhmHXORIVcVNhUjQiUa/DkplcJFXGQ
+pULHNKRNO/2QjzNak8C66rOChCryzNi5ifUwzS3fNlloNAVk2LlkxKmf/a0uE+gj
+gmnOi4EzJMwvBMfkfMhf4Bw42essISGQqplILXsCXa3cEJQ2uII1fpAstwY/SjGJ
+9IlawPnqvSDwBpildaoXq4yD/FQXpTphqnh+wzXm/j7RiOtq68QUoFwNukKd07Xr
+WSE9ZdZqcvuxayn8aZON/dpAwxKkXA28+mSDS0HEFRMyTwHx/8bfSVqr5UFjtL/Z
+8WA4dH219ww7Jb+bCEc23VxRf67DUIRj45SwnWWbymvcpwzamHc6srl19+k4Mx8I
+/ZD1T/zfoCwQ0P/LoWI50Xjp+HjmGK83xDhxcJmFtrFnyTHpJU6MMsSrGrCJvpkB
+Z2MmItRLaKycbruq0UuwK8Kr3Uzt/3vY5voswc+R5NEDu8vbgn5nGwmOMRij8Sz8
+5AyEfSFPb80FnfflzoD7J9oigdffKR0Y5zN8923H0stHYOfmzkbodp0Zyxh9iQIz
+BBMBCAAdFiEEDJV3/SxM/LS5pZlkCjCBLv867/UFAmlSknUACgkQCjCBLv867/UY
+3xAAkfmtmqTbxkfzYSMWhxu4JHIUr2VJKin8PHICKEDZYznHFS6+bsPxD//m022U
+xfPzv1UEVrFserJPnKeeK273LPmLr8F4HwVeqOzKkZ8ST/B8eHN0iLqFPT9r89wD
+jDVoo4tn8EzNeKMM5wcmQ6LXTeKsKaNeEIn5vmCoCfLWJm7x1876icpNu0DWCJQB
+vSeuHSIm7a/pKtVG1NNuZJH7cBojM69pi8w6k/3DYXwSDFqRBhDEm34/LavXD31k
+HOpqw9lCwIHXcvEWgpwhY+O+7WJCTy3NGjiTqltuTNz0T4DizQKB/TcVYBn4Z3Nw
+2F/74a8Lcl14TXkLdGZv7TodymXlYKZAgjCPMPbeZGCTGTY2xOE41n/Ebhypendw
+2IdyPvnkb6okwhYobvxxIPOiLTHDnYBYyqzLVwPQyQ2hV0U7lRVLdQnlICkEMear
+whufHoEuRCXIVoeTBPApB2PAzZdVP8sTVBVoSwXtzFX6leIbTJS/GZMlHu2gNvM2
+x8B22srVKYyyt+Ggtpi2PMCS962pBByHV0/Vv18+EKe2d5Ly2dw+cfhcwwPmAP1I
+rfwBS3VniF4UpZtG7FxQqdmDsidYz+AlyvWHw0Z3ZmcP8A/hnVt1CjumXRYCmKTX
+lBFEeVSiPzaaUXta8n3VWY0lTL31/4rsXf9zrma83bD+DfaJAjMEEwEIAB0WIQSN
+YkKLpSbTx6RddOIyMyKdCg74LQUCaVKSdQAKCRAyMyKdCg74LTr2D/9QYbRoZZbz
+q7CTk5QIjls7jdwBB+VrDjsF2f2MtA0hLEk3slOH5MwaxgKmpYANNBthOaqo4paN
+VHRYRwh8/D7JRwqyV1Mulozyn3u3Ota9BD8RKN7r8ZSw+oMLDEDcERuWwp+pBuXC
+tlUKbvCd5BPughFW0FXER7v835kNsTe2PF3l+rbuXMqu8lcd9RW/FZrN1GP8PEN1
+3pRrt3RkfvlMyDYeLwABeY7RxUycqm0UAt5NjNC6unfD952MOYuiTh51DciP1TuP
+kmE0kZDljAQP4XS7w7t9Zgb4aHd7awGqT4n3PPYyaVPsDMDY5ATofuRXdI3Miq0l
+ZfWcwQTRG6IIYmVZAUHt8Dcfk0WeB6UPJU28dANYk2W2EENmOPK4j/tazBRqZUiL
+T++uA6IT0v065lFSJUo5oVw/wUwUXoZYL6vBkLRuzeIF8FjY75p/282+mX63iEuD
+FKf/oxY3viunIh/TcraTlsEmer6MhP0DJ5WlolLWzTepeNar6eDCB1pqOPfju5qY
+jFSXlDJpmSCW0TNLYtMyFegFMicIbuitbnG2eK4tuYIPDi5doRPpo3dmpyUyMBv1
+Gwq2PYkzecYirCcLcbKThUFluNG9omHB3i2lFdgHuUFD542fEcWw1jD4ZzcuN/Ru
+CiRnrFSs8JzlSNJl//aNMwxCEqrgNHfU+rRTU21hcnRtb250b29scyBTaWduaW5n
+IEtleSAodGhyb3VnaCAyMDI1KSA8c21hcnRtb250b29scy1kYXRhYmFzZUBsaXN0
+aS5qcGJlcmxpbi5kZT6JAlUEEwEIAD8CGwMGCwkIBwMCBhUIAgkKCwQWAgMBAh4B
+AheABQkWloVqFiEE3seuR5aLfIdZR/Kp6nSrJXIQQsUFAmlSknUACgkQ6nSrJXIQ
+QsVzTRAAo8b4OW/LmCfeUlAr7qiae6PMlRJE81jOvnIgHItiMF6p8nwnhcczW0th
+pV56FpW2xr2Y07V2Sl1XGlOilcU4bsd2OdmPnjiQ9HkbHpK6aL8Nuy5tF9d5aEUe
+JMb6VkuFVwlE3HJ3lZozxzxlMKAxZDPtrEJyX5wtTB96GWM7sBibMEYEw3U1x9OK
+BplGhqxDmx+iUCYaHw9WW7jEjF3wSnnA4qktrsSQBd+9xzePDkKvHTuN74nvDTxM
++aTDhbY4otGsEPeDgeibz4SkufcYYa8Fl0cTtPMTeqddh9JTkDN+PwM/QvUY1aD+
+GM4scckVtd9pe++wG/bAjIBA1pPNefOtH7LhS8PYl2eXUS0l4Ckz3+J6kaOpS2KS
+VL5KX5EwjOLnfuE3JlUwRAXvkt0XXjgy7nh7tmXEccRIPHGq/9jlQTBlWLv/+vGO
+ZPG7bjFEU3hkZO7F2v+vWOew1nbYjsnDd7ZvVBpalgdjzsu4gL5NrfPKxArw6h2z
+n+JdT45Z9n8oBGazu4IEvNbbPQOMF1y94yJ9/6gyS7SkGWRjkUM2yVJMOHE0xhtt
+m2yCDfiWkNBCqGl/hpCW6EGW8L/uHjURmPuuPIAGuVC9W4PNvLBemagoNhHnBsgT
+c7O4O+xWvuXNvO+lfcNo/B7EQr4TWsZcGq1aks213sSidnV8mNKJARwEEwECAAYF
+Al/gnzoACgkQL83sC9OvGqvE0Af/XXZ4GWMf4rEB0G3lXr9L9bvX4a/tVWz0hag5
+7D6By9R6cWNDpRtKx5R0Y1Fv+O+sPHptM3P6LUsWI0d7dEf307n34FxkI/vh4W1g
+8ITvhYfJWmJTzA1kNAief45uNPx0QWhGlVf4nQzhe41XnuBdFhYfOkHGf6k89SJ9
+qWRitzE657h6mVO0EKqvjTld8w6lR2rA+oHPQnc9iDmXcZLfSTHP/NapQXPlqtXi
+R1z0BkswBBaKCnJxVPpzjQA0W8jSyhQ4qPheMjOmVaFoQxZ4CbEaFI67EmVlkwgw
+f+c6BlKr3DoOca/KmHYT/9dqUv1gfoYYTCm+ATN76vYCG794EokCHAQTAQIABgUC
+X+CfRQAKCRC/CzOcZLyqiwQWD/9eNQNnKWxkYL3qjSRt0DwUUaCcFDoj40rbfRxW
+dU+LZKL7KjAWoRhdfaH7T30wZ9NFenrQXaU/QzuYioz1sHRwIIRYyUp2s0JcVHAI
+uOPjk6Q3TDVnbEm0AO0Er32gdxC0DYk4RfGp95n1Aw1kd2BSvKPJuZSRJrIVf8iU
+3Im1KT4Avl7Fw7FEojQMMvn/qZzeo2pk/QdrrK3KnHkQwy2edx/szY82o2a5g5Wa
+rFFRcxVS2H/xrvNMGUL4TsWcGd3Z2oHoZ0u5A20/PpT2xG1LGXGEwBAqtMS26iRA
+zbQFkkLhcdETTvOSqkDWkzr7NqJ6adhLOEVXsHXNLx23p1Tn+Li/ezpQ6/eQQDPc
+lU19BjARmfInDq0w5V1q0RNET1J2Xu+Adxtq+Dl8TyhCmJMzO8e4htYnIRZu90iS
+gZdt5cZgoH04weXCMwDugn/+Q3rzKvRUTrEfSOivJYg65D/mhbz6HoUTs4JDSstT
+Ya9qNCwKQGRSeis4PAgu0hCpnDAhZuN3Ja5AFC2Wi2szQ7R+Zx/JucIBm5S4U30W
+66MtsyUHeulSJ3AV3HrbFfnqu6zfQM4XLw7MpAtQUNJceS/lWfGIquAp3tY/IjZI
+HwgZqKB3czWDhM83wBzCWgAmxyzIrpb4MBYJ5PGuCyC7R/YTdtPJXxsPQl2lznsX
+/9ssa4kBHAQTAQIABgUCX+CfSAAKCRDzh2PO39IlWVcuB/9UkLaPtGY4sDDV/A7q
+jSvSy93mv8gkaIj9dhqoZw+r7cLiEtX04Cz9PqocOFgCYJXKrufHNNkHke2AjE9E
+JfRKiPU/bkeWmrACvtrOd/DZbdmXfxTOekOr516D2ip/U8GBPw6zxfCQVot6htpB
+pB6zzMDtzMOeLnkOxoxR4EMu5K6eJ48bHvG/lbGBByyfRzhtqPh6AAA9G1CCIdhN
+kaA5W1qums3N1mCXrTBnWyjaFhdnttGQfrMdHvTQ77HeL0c2axT2y5PYfrXY2ZfZ
+owYLEtFXRSTpDaJfgG+qem3N+pMv6SMOG/4CvlH4/3Hq0aCNvKcY5KUXfIgTxmc3
+/n/wtFNTbWFydG1vbnRvb2xzIFNpZ25pbmcgS2V5ICh0aHJvdWdoIDIwMjApIDxz
+bWFydG1vbnRvb2xzLWRhdGFiYXNlQGxpc3RpLmpwYmVybGluLmRlPokCVQQTAQgA
+PwIbAwYLCQgHAwIGFQgCCQoLBBYCAwECHgECF4AWIQTex65Hlot8h1lH8qnqdKsl
+chBCxQUCaVKSdAUJFpaFagAKCRDqdKslchBCxYaFEADDHgA8fJqlx9soJzHjShO9
+sKriBMC0ZGguxgy0F5Pv8dgcqARGkd5lveyab2fh+CuDU0ctZ8iw50zFKDpANqCs
+maRclNtgpPzK3EUYURrGjyOB3RHLT8WNxS7JMNpmeJwoEkH7ZznbpHLjoH6KMssJ
+hUVp96we5U1aJZvfxlJ70I4botKlj6mwU0iupivpxwjQipBZcSLJa8QRLKwEdRYo
+jKgsiHdApRrxv8OYob9Ey9xkoYz9PAWD47Gmk6vSBgz0Ie2jO2aZrEo+wN4EO2qp
+BjfzV9XgdWx1rbYKbTicDPL+wYVQClupNbyWqagCX5W6biAgkzno5mXJaFcuYyUx
+e/tLSyF1s8hFNkEyDAcExjlFC0W6d36Ksabh0BSli+IVeUdldps2LYgVhQ6uJp4G
+aFlcBb3Cr1hBMBnK1L/bjxjteteSev2pO+3X2LAlEx+W5Uf7D8z473SmsQ9xbHfh
+77Qr/yk+4l4Tg/6bofMgx2KXD6rgaYDtuv0nniMNB1kzk4kFZa7VMnsD7RkkhPTM
+ZOkkvnGgosoRFFQ34AFV3LcsxLYOdWEHgfXQnrhsireEFhliAg7qgr9jdE2I9hsn
+WvAug7b1rNkQMbAjoi+B2eBotNc6uWAMoEG5BAAPQ7L6d7Zcohssrs8Nkza+AW/X
+ksgmJvTKaeeZnZWTmxUh44kBHAQTAQIABgUCXCaGnAAKCRAvzewL068aqxU6CACo
+sHl5CtS/wT2KQPqQkKK2jzbtvMNYXb3IPs+9+GNdrPmKfniM5WnCDej0KyoiONFb
+T/VsFWzALxkvSwB1n4YNIMzDkXYimQPvuCOcVjv0z97oL3FjLFjMcLt6YM9LP0iu
+g692SQSCsH44AEqRo4JxLXw/guTdY0do/DlztojTPWIk/nYSZJ+8Hyvzqa1QUkH5
+/Xl4P/i9pF+RksWMX0VDeSAQrVT6tXizU7ZsIV8/dY8Nxzzc2DBFS+1eZxI5I4ih
+ed6YnPImv4meoJZURPhdYXqLbSZEVdUSla1/kCQliBHfP+NbR2MQtsFYD/flsCel
+fLmkMe/01tmxOQFnEr+SiQEcBBMBAgAGBQJcJoadAAoJEBjs2kbL9rrGfiUH/3S1
+dOdmyCah+2iX26K99Cs91HzxaY5ktiZR5AB3WupIUzF74rM7+ou5Tyzo4XifOfAv
+Zw99sZnF7Mzg+JiYCZtsRT/eBM43CNUEEDQZ+KbL98hMR7MW0KKCjW2GRonX3mD9
+2pj7MTdW3ivMLTePW/HyZQdE9TqSS8qPxw/SP5cdfbFAOxNdOy1+eibb3AGYae9J
+n0eBx0vvV7VVclfCKSac7c/gn/ULYt4I6VasapZnZzRYEsp0mexhTHsOb86+SQHi
+UX7Nan3zNLyNL/mH7VqlWATOt1My9PzJ1ORSvs5soaQiEr4v5ejkEP5X1B/rEoZg
+/CGF2P8Tn+TKNQuubXSJARwEEwECAAYFAlwmhp0ACgkQ84djzt/SJVl+JQf/fIpL
+nAa9N5Eiex7z5bVbMq62jdfOpcueBv1BdbDucLCqY1Ls9vMOe59CLZOEqsx9wrXh
+aA1gAE1k9Tvkj7ptxvSgIHm2WighQRX/ZS3/keX/zfMUWg0D+RApXPyQgOqBFzEL
+7NjZUnh5MofJAO9fKBWTzCcpMFp7eBf4Ihmokc9eKLKAeVuXfUyLcbUhrG7nt0/q
+hxXS9fV3K0pLB3hFu+LDBvgvvqj+1VP23cbAUzXm4rVKq2cBqJqS0R0yLdcjh3TU
+fdVRXP+JHRdBt/XdFmgQzoIlaaxD+q9iXCRso52VqGOgesWWSEANIFo703U5mnc5
+gOPOIi6Mx23Yg8qeYw==
+=Kp7v
 -----END PGP PUBLIC KEY BLOCK-----
 "
       ;;
