--- a/.github/workflows/build-manually.yml
+++ b/.github/workflows/build-manually.yml
@@ -322,19 +322,17 @@ jobs:
             SOURCE_DATE_EPOCH=$((SMARTMONTOOLS_GIT_REV_EPOCH + 1)) &&
           make ${{ github.event.inputs.make-options }} && make check &&
           bin_distfile="../../smartmontools-windows-x86_64-${{ github.event.inputs.suffix }}-${SMARTMONTOOLS_GIT_VER_FNAME}.tar.gz" &&
-          make bin_distfile="$bin_distfile" bin-dist && tar -tvf "$bin_distfile"
+          make bin_distfile="$bin_distfile" bin-dist && tar -tvf "$bin_distfile" &&
+          case ' ${{ github.event.inputs.cfg-options }} ' in *\ --enable-static-link\ *) ;; *) exit 0 ;; esac &&
+          cd src &&
+          make distinst_win32="../../../smartmontools-windows-x86_64-setup-${{ github.event.inputs.suffix }}-${SMARTMONTOOLS_GIT_VER_FNAME}.exe" \
+            installer-win32
 
       - uses: actions/upload-artifact@v4
         with:
           name: smartmontools-windows-x86_64-${{ github.event.inputs.suffix }}-tar
           path: smartmontools-windows-x86_64-${{ github.event.inputs.suffix }}-*.tar.gz
           retention-days: 30
-
-      - name: Build installer
-        if: ${{ contains(github.event.inputs.cfg-options, '--enable-static-link') }}
-        run: |
-          make distinst_win32="../../../smartmontools-windows-x86_64-setup-${{ github.event.inputs.suffix }}-${SMARTMONTOOLS_GIT_VER_FNAME}.exe" \
-            installer-win32
 
       - uses: actions/upload-artifact@v4
         if: ${{ contains(github.event.inputs.cfg-options, '--enable-static-link') }}
